more analysis of collinearity

--- a/Multilinear_Regression.ipynb
+++ b/Multilinear_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2270,6 +2270,164 @@
    "metadata": {},
    "source": [
     "**Time signature is highly collinear with energy, tempo, danceability, duration. To a lesser extent, it is strongly collinear with loudness and valence.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Looking at the data, however, nearly every single entry has a time signature of 4/4 time. To visualize this: ** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYEAAAD8CAYAAACRkhiPAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEjtJREFUeJzt3X+slud93/H3Z5BQx5kXW5wxBniwimYCa22aM+QtW5XW\na82WKPCXRbQ0bLOC2rAu3TpFpvvD2h9I7lZ1XaTZEkq8YDUyQklao6bOymgqK1Idcuw4tYFQ02IH\nGDYnizo3m0aK890f52ry9Bh88HOfc56E6/2SHj3X/b2v+76uWwh9zv3jeZ5UFZKkPv2VSU9AkjQ5\nhoAkdcwQkKSOGQKS1DFDQJI6ZghIUscMAUnq2IIhkOThJJeSPDev/gtJvpbkRJL/OFLfl+RMktNJ\n7h6pvzPJs23dx5JkcQ9FkvRGXc+ZwCeB7aOFJD8J7AB+tKq2Ar/a6luAXcDWts2DSVa0zR4CPgRs\nbq+/tE9J0vJbuVCHqnoiycZ55Z8HHqiqy63PpVbfARxq9bNJzgDbkrwA3FJVTwIkeQTYCTy+0Pir\nV6+ujRvnDy9Jej1PPfXUN6pqaqF+C4bANfwI8I+S7Af+H/DvqurLwDrgyZF+51vtz1t7fn1BGzdu\nZGZmZsxpSlKfkrx4Pf3GDYGVwG3AncDfAw4n+dtj7us1kuwB9gDcfvvti7VbSdI84z4ddB74bM05\nDnwHWA1cADaM9Fvfahdae379qqrqQFVNV9X01NSCZzOSpDGNGwK/BfwkQJIfAd4MfAM4AuxKsirJ\nJuZuAB+vqovAK0nubE8FfRB4bPDsJUmDLHg5KMmjwLuB1UnOA/cDDwMPt8dGvw3srrnvpD6R5DBw\nErgC7K2qV9uuPszck0Y3MXdDeMGbwpKkpZXv998TmJ6eLm8MS9Ibk+SpqppeqJ+fGJakjhkCktQx\nQ0CSOmYISFLHxv2wmCQtm433fW5iY7/wwHsmNvZy8ExAkjpmCEhSxwwBSeqYISBJHTMEJKljhoAk\ndcwQkKSOGQKS1DFDQJI6ZghIUscMAUnqmCEgSR0zBCSpYwuGQJKHk1xqvyc8f90vJakkq0dq+5Kc\nSXI6yd0j9Xcmebat+1j7wXlJ0gRdz5nAJ4Ht84tJNgA/A3x9pLYF2AVsbds8mGRFW/0Q8CFgc3u9\nZp+SpOW1YAhU1RPAN6+y6j8DHwVGf6l+B3Coqi5X1VngDLAtyVrglqp6suZ+2f4RYOfg2UuSBhnr\nnkCSHcCFqvrqvFXrgHMjy+dbbV1rz69LkiboDf+yWJK3AL/M3KWgJZFkD7AH4Pbbb1+qYSSpe+Oc\nCfwwsAn4apIXgPXA00n+BnAB2DDSd32rXWjt+fWrqqoDVTVdVdNTU1NjTFGSdD3ecAhU1bNV9der\namNVbWTu0s6PV9VLwBFgV5JVSTYxdwP4eFVdBF5Jcmd7KuiDwGOLdxiSpHFczyOijwJ/ALw9yfkk\n916rb1WdAA4DJ4HPA3ur6tW2+sPAx5m7WfzHwOMD5y5JGmjBewJV9f4F1m+ct7wf2H+VfjPAHW9w\nfpKkJeQnhiWpY4aAJHXMEJCkjhkCktQxQ0CSOmYISFLHDAFJ6pghIEkdMwQkqWOGgCR1zBCQpI4Z\nApLUMUNAkjpmCEhSxwwBSeqYISBJHTMEJKljhoAkdex6fmP44SSXkjw3UvtPSb6W5A+T/GaSt42s\n25fkTJLTSe4eqb8zybNt3cfaD85Lkiboes4EPglsn1c7CtxRVX8X+CNgH0CSLcAuYGvb5sEkK9o2\nDwEfAja31/x9SpKW2YIhUFVPAN+cV/vdqrrSFp8E1rf2DuBQVV2uqrPAGWBbkrXALVX1ZFUV8Aiw\nc7EOQpI0nsW4J/Avgcdbex1wbmTd+VZb19rz65KkCRoUAkn+PXAF+NTiTOe7+92TZCbJzOzs7GLu\nWpI0YuwQSPLPgfcC/6xd4gG4AGwY6ba+1S7wvUtGo/WrqqoDVTVdVdNTU1PjTlGStICxQiDJduCj\nwPuq6v+OrDoC7EqyKskm5m4AH6+qi8ArSe5sTwV9EHhs4NwlSQOtXKhDkkeBdwOrk5wH7mfuaaBV\nwNH2pOeTVfVzVXUiyWHgJHOXifZW1attVx9m7kmjm5i7h/A4kqSJWjAEqur9Vyl/4nX67wf2X6U+\nA9zxhmYnSVpSfmJYkjpmCEhSxwwBSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS1DFDQJI6ZghIUscM\nAUnqmCEgSR0zBCSpY4aAJHXMEJCkjhkCktQxQ0CSOmYISFLHFgyBJA8nuZTkuZHabUmOJnm+vd86\nsm5fkjNJTie5e6T+ziTPtnUfaz84L0maoOs5E/gksH1e7T7gWFVtBo61ZZJsAXYBW9s2DyZZ0bZ5\nCPgQsLm95u9TkrTMFgyBqnoC+Oa88g7gYGsfBHaO1A9V1eWqOgucAbYlWQvcUlVPVlUBj4xsI0ma\nkHHvCaypqout/RKwprXXAedG+p1vtXWtPb8uSZqgwTeG21/2tQhz+a4ke5LMJJmZnZ1dzF1LkkaM\nGwIvt0s8tPdLrX4B2DDSb32rXWjt+fWrqqoDVTVdVdNTU1NjTlGStJBxQ+AIsLu1dwOPjdR3JVmV\nZBNzN4CPt0tHryS5sz0V9MGRbSRJE7JyoQ5JHgXeDaxOch64H3gAOJzkXuBF4B6AqjqR5DBwErgC\n7K2qV9uuPszck0Y3AY+3lyRpghYMgap6/zVW3XWN/vuB/VepzwB3vKHZSZKWlJ8YlqSOGQKS1DFD\nQJI6ZghIUscMAUnqmCEgSR0zBCSpY4aAJHXMEJCkjhkCktQxQ0CSOmYISFLHDAFJ6pghIEkdMwQk\nqWOGgCR1zBCQpI4ZApLUsUEhkOTfJDmR5Lkkjyb5oSS3JTma5Pn2futI/31JziQ5neTu4dOXJA0x\ndggkWQf8a2C6qu4AVgC7gPuAY1W1GTjWlkmypa3fCmwHHkyyYtj0JUlDDL0ctBK4KclK4C3A/wR2\nAAfb+oPAztbeARyqqstVdRY4A2wbOL4kaYCxQ6CqLgC/CnwduAj876r6XWBNVV1s3V4C1rT2OuDc\nyC7Ot5okaUKGXA66lbm/7jcBfxO4OckHRvtUVQE1xr73JJlJMjM7OzvuFCVJCxhyOegfA2eraraq\n/hz4LPAPgJeTrAVo75da/wvAhpHt17faa1TVgaqarqrpqampAVOUJL2eISHwdeDOJG9JEuAu4BRw\nBNjd+uwGHmvtI8CuJKuSbAI2A8cHjC9JGmjluBtW1ZeSfBp4GrgCfAU4ALwVOJzkXuBF4J7W/0SS\nw8DJ1n9vVb06cP6SpAHGDgGAqrofuH9e+TJzZwVX678f2D9kTEnS4vETw5LUMUNAkjpmCEhSxwwB\nSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS1DFDQJI6ZghIUscMAUnqmCEgSR0zBCSpY4aAJHXMEJCk\njhkCktQxQ0CSOjYoBJK8Lcmnk3wtyakkfz/JbUmOJnm+vd860n9fkjNJTie5e/j0JUlDDD0T+C/A\n56vq7wA/CpwC7gOOVdVm4FhbJskWYBewFdgOPJhkxcDxJUkDjB0CSf4a8BPAJwCq6ttV9afADuBg\n63YQ2NnaO4BDVXW5qs4CZ4Bt444vSRpuyJnAJmAW+G9JvpLk40luBtZU1cXW5yVgTWuvA86NbH++\n1SRJEzIkBFYCPw48VFXvAP4P7dLPX6iqAuqN7jjJniQzSWZmZ2cHTFGS9HqGhMB54HxVfaktf5q5\nUHg5yVqA9n6prb8AbBjZfn2rvUZVHaiq6aqanpqaGjBFSdLrGTsEquol4FySt7fSXcBJ4Aiwu9V2\nA4+19hFgV5JVSTYBm4Hj444vSRpu5cDtfwH4VJI3A38C/AvmguVwknuBF4F7AKrqRJLDzAXFFWBv\nVb06cHxJ0gCDQqCqngGmr7Lqrmv03w/sHzKmJGnx+IlhSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS\n1DFDQJI6ZghIUscMAUnqmCEgSR0zBCSpY4aAJHXMEJCkjhkCktQxQ0CSOmYISFLHDAFJ6pghIEkd\nGxwCSVYk+UqS327LtyU5muT59n7rSN99Sc4kOZ3k7qFjS5KGWYwzgY8Ap0aW7wOOVdVm4FhbJskW\nYBewFdgOPJhkxSKML0ka06AQSLIeeA/w8ZHyDuBgax8Edo7UD1XV5ao6C5wBtg0ZX5I0zNAzgV8H\nPgp8Z6S2pqoutvZLwJrWXgecG+l3vtUkSRMydggkeS9wqaqeulafqiqgxtj3niQzSWZmZ2fHnaIk\naQFDzgTeBbwvyQvAIeCnkvwG8HKStQDt/VLrfwHYMLL9+lZ7jao6UFXTVTU9NTU1YIqSpNczdghU\n1b6qWl9VG5m74ft7VfUB4Aiwu3XbDTzW2keAXUlWJdkEbAaOjz1zSdJgK5dgnw8Ah5PcC7wI3ANQ\nVSeSHAZOAleAvVX16hKML0m6TosSAlX1+8Dvt/b/Au66Rr/9wP7FGFOSNJyfGJakjhkCktQxQ0CS\nOmYISFLHDAFJ6pghIEkdMwQkqWOGgCR1zBCQpI4ZApLUMUNAkjpmCEhSxwwBSeqYISBJHTMEJKlj\nhoAkdcwQkKSOGQKS1LGxQyDJhiRfSHIyyYkkH2n125IcTfJ8e791ZJt9Sc4kOZ3k7sU4AEnS+Iac\nCVwBfqmqtgB3AnuTbAHuA45V1WbgWFumrdsFbAW2Aw8mWTFk8pKkYcYOgaq6WFVPt/afAaeAdcAO\n4GDrdhDY2do7gENVdbmqzgJngG3jji9JGm5R7gkk2Qi8A/gSsKaqLrZVLwFrWnsdcG5ks/OtJkma\nkMEhkOStwGeAX6yqV0bXVVUBNcY+9ySZSTIzOzs7dIqSpGsYFAJJ3sRcAHyqqj7byi8nWdvWrwUu\ntfoFYMPI5utb7TWq6kBVTVfV9NTU1JApSpJex5CngwJ8AjhVVb82suoIsLu1dwOPjdR3JVmVZBOw\nGTg+7viSpOFWDtj2XcDPAs8meabVfhl4ADic5F7gReAegKo6keQwcJK5J4v2VtWrA8aXJA00dghU\n1ReBXGP1XdfYZj+wf9wxJUmLy08MS1LHDAFJ6pghIEkdMwQkqWOGgCR1zBCQpI4ZApLUMUNAkjpm\nCEhSxwwBSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS1DFDQJI6ZghIUseG/LykpAnZeN/nJjLuCw+8\nZyLjauks+5lAku1JTic5k+S+5R5fkvQ9y3omkGQF8F+BnwbOA19OcqSqTi7nPCTpet3oZ13LfSaw\nDThTVX9SVd8GDgE7lnkOkqRmuUNgHXBuZPl8q0mSJuD78sZwkj3Anrb4rSSnx9zVauAbizOrHxge\ncx8mcsz5leUe8bu6+zfOrww+5r91PZ2WOwQuABtGlte32l9SVQeAA0MHSzJTVdND9/ODxGPuQ2/H\n3NvxwvId83JfDvoysDnJpiRvBnYBR5Z5DpKkZlnPBKrqSpJ/Bfx3YAXwcFWdWM45SJK+Z9nvCVTV\n7wC/s0zDDb6k9APIY+5Db8fc2/HCMh1zqmo5xpEkfR/yu4MkqWM3ZAj0+NUUSR5OcinJc5Oey3JI\nsiHJF5KcTHIiyUcmPaelluSHkhxP8tV2zP9h0nNaLklWJPlKkt+e9FyWQ5IXkjyb5JkkM0s61o12\nOah9NcUfMfLVFMD7b/SvpkjyE8C3gEeq6o5Jz2epJVkLrK2qp5P8VeApYOeN/O+cJMDNVfWtJG8C\nvgh8pKqenPDUllySfwtMA7dU1XsnPZ+lluQFYLqqlvyzETfimUCXX01RVU8A35z0PJZLVV2sqqdb\n+8+AU9zgnz6vOd9qi29qrxvrr7irSLIeeA/w8UnP5UZ0I4aAX03RmSQbgXcAX5rsTJZeuyzyDHAJ\nOFpVN/wxA78OfBT4zqQnsowK+B9JnmrfoLBkbsQQUEeSvBX4DPCLVfXKpOez1Krq1ar6MeY+bb8t\nyQ196S/Je4FLVfXUpOeyzP5h+3f+J8Dedrl3SdyIIXBdX02hH3ztuvhngE9V1WcnPZ/lVFV/CnwB\n2D7puSyxdwHva9fIDwE/leQ3JjulpVdVF9r7JeA3mbvMvSRuxBDwqyk60G6SfgI4VVW/Nun5LIck\nU0ne1to3Mffww9cmO6ulVVX7qmp9VW1k7v/y71XVByY8rSWV5Ob2sANJbgZ+Bliyp/5uuBCoqivA\nX3w1xSngcA9fTZHkUeAPgLcnOZ/k3knPaYm9C/hZ5v4yfKa9/umkJ7XE1gJfSPKHzP2xc7Squnhk\nsjNrgC8m+SpwHPhcVX1+qQa74R4RlSRdvxvuTECSdP0MAUnqmCEgSR0zBCSpY4aAJHXMEJCkjhkC\nktQxQ0CSOvb/AcXoES2i4lqRAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1185c3490>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "timesignature = pd.DataFrame(data=d1, columns=[9]) \n",
+    "plt.hist(timesignature)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A 4/4 time signature is common in most all popular music, not a unique feature of high-ranking songs.**\n",
+    "\n",
+    "**The other features associated with high R^2 values: columns 3 (energy), 5 (tempo), 10 (danceability), 12 (duration).**  \n",
+    "\n",
+    "**We showed earlier that energy is correlated with tempo and danceability. What about duration?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>3</td>        <th>  R-squared:         </th> <td>   0.911</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.911</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>1.306e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Fri, 06 Apr 2018</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>14:38:18</td>     <th>  Log-Likelihood:    </th> <td>  177.80</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>  1275</td>      <th>  AIC:               </th> <td>  -353.6</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>  1274</td>      <th>  BIC:               </th> <td>  -348.5</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "   <td></td>     <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>12</th> <td> 2.871e-06</td> <td> 2.51e-08</td> <td>  114.282</td> <td> 0.000</td> <td> 2.82e-06</td> <td> 2.92e-06</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>56.670</td> <th>  Durbin-Watson:     </th> <td>   1.978</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  63.565</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.517</td> <th>  Prob(JB):          </th> <td>1.57e-14</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 3.356</td> <th>  Cond. No.          </th> <td>    1.00</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                      3   R-squared:                       0.911\n",
+       "Model:                            OLS   Adj. R-squared:                  0.911\n",
+       "Method:                 Least Squares   F-statistic:                 1.306e+04\n",
+       "Date:                Fri, 06 Apr 2018   Prob (F-statistic):               0.00\n",
+       "Time:                        14:38:18   Log-Likelihood:                 177.80\n",
+       "No. Observations:                1275   AIC:                            -353.6\n",
+       "Df Residuals:                    1274   BIC:                            -348.5\n",
+       "Df Model:                           1                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "12          2.871e-06   2.51e-08    114.282      0.000    2.82e-06    2.92e-06\n",
+       "==============================================================================\n",
+       "Omnibus:                       56.670   Durbin-Watson:                   1.978\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               63.565\n",
+       "Skew:                          -0.517   Prob(JB):                     1.57e-14\n",
+       "Kurtosis:                       3.356   Cond. No.                         1.00\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duration = pd.DataFrame(data=d1, columns=[12]) \n",
+    "energy = pd.DataFrame(data=d1, columns=[3]) \n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(duration, energy, test_size=0.2)\n",
+    "model = sm.OLS(y_train, X_train).fit()\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This relationship was unexpected. Upon closer examination of the model summary, it appears that the correlation coefficient for the relationship between energy & duration is very small, at 2.871e-06.**\n",
+    "\n",
+    "**Similarly, the coefficient between energy & tempo is low at 0.0054, and the same goes for the coefficeint for energy & loudness (at -0.0971).** \n",
+    "\n",
+    "**What could be happening?**\n",
+    "\n",
+    "**The large sample size could be inflating R^2 value, picking up on correlations that are very minor, and thus inflating the relationship between some features.**"
    ]
   },
   {
