--- a/Multilinear_Regression.ipynb
+++ b/Multilinear_Regression.ipynb
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1647,25 +1647,25 @@
        "<table class=\"simpletable\">\n",
        "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>            <td>3</td>        <th>  R-squared:         </th> <td>   0.912</td> \n",
+       "  <th>Dep. Variable:</th>            <td>1</td>        <th>  R-squared:         </th> <td>   0.735</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.912</td> \n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.735</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>1.320e+04</td>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   3532.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Date:</th>             <td>Sat, 14 Apr 2018</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>12:03:09</td>     <th>  Log-Likelihood:    </th> <td>  180.08</td> \n",
+       "  <th>Time:</th>                 <td>12:14:58</td>     <th>  Log-Likelihood:    </th> <td> -6151.9</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td>  1275</td>      <th>  AIC:               </th> <td>  -358.2</td> \n",
+       "  <th>No. Observations:</th>      <td>  1275</td>      <th>  AIC:               </th> <td>1.231e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>  1274</td>      <th>  BIC:               </th> <td>  -353.0</td> \n",
+       "  <th>Df Residuals:</th>          <td>  1274</td>      <th>  BIC:               </th> <td>1.231e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>    \n",
@@ -1679,21 +1679,21 @@
        "   <td></td>     <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>12</th> <td> 2.882e-06</td> <td> 2.51e-08</td> <td>  114.875</td> <td> 0.000</td> <td> 2.83e-06</td> <td> 2.93e-06</td>\n",
+       "  <th>12</th> <td>    0.0002</td> <td> 3.59e-06</td> <td>   59.428</td> <td> 0.000</td> <td>    0.000</td> <td>    0.000</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td>72.248</td> <th>  Durbin-Watson:     </th> <td>   1.997</td>\n",
+       "  <th>Omnibus:</th>       <td>157.407</td> <th>  Durbin-Watson:     </th> <td>   2.022</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  86.441</td>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>  42.717</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>          <td>-0.566</td> <th>  Prob(JB):          </th> <td>1.70e-19</td>\n",
+       "  <th>Skew:</th>          <td>-0.072</td>  <th>  Prob(JB):          </th> <td>5.30e-10</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 3.590</td> <th>  Cond. No.          </th> <td>    1.00</td>\n",
+       "  <th>Kurtosis:</th>      <td> 2.115</td>  <th>  Cond. No.          </th> <td>    1.00</td>\n",
        "</tr>\n",
        "</table>"
       ],
@@ -1702,24 +1702,24 @@
        "\"\"\"\n",
        "                            OLS Regression Results                            \n",
        "==============================================================================\n",
-       "Dep. Variable:                      3   R-squared:                       0.912\n",
-       "Model:                            OLS   Adj. R-squared:                  0.912\n",
-       "Method:                 Least Squares   F-statistic:                 1.320e+04\n",
+       "Dep. Variable:                      1   R-squared:                       0.735\n",
+       "Model:                            OLS   Adj. R-squared:                  0.735\n",
+       "Method:                 Least Squares   F-statistic:                     3532.\n",
        "Date:                Sat, 14 Apr 2018   Prob (F-statistic):               0.00\n",
-       "Time:                        12:03:09   Log-Likelihood:                 180.08\n",
-       "No. Observations:                1275   AIC:                            -358.2\n",
-       "Df Residuals:                    1274   BIC:                            -353.0\n",
+       "Time:                        12:14:58   Log-Likelihood:                -6151.9\n",
+       "No. Observations:                1275   AIC:                         1.231e+04\n",
+       "Df Residuals:                    1274   BIC:                         1.231e+04\n",
        "Df Model:                           1                                         \n",
        "Covariance Type:            nonrobust                                         \n",
        "==============================================================================\n",
        "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
        "------------------------------------------------------------------------------\n",
-       "12          2.882e-06   2.51e-08    114.875      0.000    2.83e-06    2.93e-06\n",
+       "12             0.0002   3.59e-06     59.428      0.000       0.000       0.000\n",
        "==============================================================================\n",
-       "Omnibus:                       72.248   Durbin-Watson:                   1.997\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               86.441\n",
-       "Skew:                          -0.566   Prob(JB):                     1.70e-19\n",
-       "Kurtosis:                       3.590   Cond. No.                         1.00\n",
+       "Omnibus:                      157.407   Durbin-Watson:                   2.022\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               42.717\n",
+       "Skew:                          -0.072   Prob(JB):                     5.30e-10\n",
+       "Kurtosis:                       2.115   Cond. No.                         1.00\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
@@ -1727,14 +1727,14 @@
        "\"\"\""
       ]
      },
-     "execution_count": 95,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "duration = pd.DataFrame(data=d1, columns=[12]) \n",
-    "rank = pd.DataFrame(data=d1, columns=[3]) \n",
+    "rank = pd.DataFrame(data=d1, columns=[1]) \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(duration, rank, test_size=0.2)\n",
     "model = sm.OLS(y_train, X_train).fit()\n",
@@ -1745,7 +1745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Though the R^2 value for the relationship between rank & duration is high, the coefficient is very small, at 2.882e-06. Similarly, the coefficients for energy & time signature and energy & loudness that were found earlier are both low.** \n",
+    "**Though the R^2 value for the relationship between rank & duration is high, the coefficient is very small. Similarly, the coefficients for energy & time signature and energy & loudness that were found earlier are both low.** \n",
     "\n",
     "**What could be happening?**\n",
     "\n",
