--- a/sklearnkNN.ipynb
+++ b/sklearnkNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        " 3.0        272394    -7.596    0.405  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,64 +208,89 @@
    "source": [
     "import pandas as pd\n",
     "names = ['Rank','Song','Artist','Year','Lyrics','ids','Energy','Liveness','Tempo','Speechiness','Acousticness','Instrumentalness','Time Signature','Danceability','Key','Duration (ms)','Loudness','Valence']\n",
-    "df = pd.read_csv('data/output.csv', header=None, names=names)\n",
+    "df = pd.read_csv('data/FINAL_cleaned_output.csv', header=None, names=names)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.cross_validation import train_test_split\n",
     "# [7,8,9,10,11,12,13,14,15,16,17,18]\n",
-    "X = np.array(df.ix[1:, 7:18])\n",
+    "# X = np.array(df.ix[1:, 7:18])\n",
+    "# Energy, Liveness, Tempo\n",
+    "# X = np.array(df.ix[1:, 7:9])\n",
+    "# Speechiness, Acousticness, Instrumentalness\n",
+    "# X = np.array(df.ix[1:, 10:12])\n",
+    "# Danceability and loudness\n",
+    "X = np.array(df.ix[1:, 14:15])\n",
     "X = np.asfarray(X,float)\n",
     "count = 0\n",
     "#for x in X:\n",
     "#    count += 1\n",
     "#    for y in x:\n",
     "#    if np.isnan(x[0]):\n",
-    "#        print count\n",
-    "#        print x\n",
+    "#    print count\n",
+    "#     print x\n",
+    "#    print np.isfinite(x)\n",
     "#X = np.asfarray(X,float)\n",
-    "y = np.array(df.ix[1:, 1])\n",
-    "X = np.delete(X, (151), axis=0)\n",
-    "X = np.delete(X, (361), axis=0)\n",
-    "X = np.delete(X, (374), axis=0)\n",
-    "X = np.delete(X, (409), axis=0)\n",
-    "X = np.delete(X, (587), axis=0)\n",
-    "X = np.delete(X, (768), axis=0)\n",
-    "y = np.delete(y, (151), axis=0)\n",
-    "y = np.delete(y, (361), axis=0)\n",
-    "y = np.delete(y, (374), axis=0)\n",
-    "y = np.delete(y, (409), axis=0)\n",
-    "y = np.delete(y, (587), axis=0)\n",
-    "y = np.delete(y, (768), axis=0)\n",
+    "y = np.array(df.ix[1:, 0])\n",
+    "y = np.asfarray(y,float)\n",
+    "#print y\n",
+    "#print np.isfinite(y)\n",
+    "#for Y in y:\n",
+    "#    count += 1\n",
+    "#    if np.isnan(Y):\n",
+    "#        print count\n",
+    "#        print Y\n",
+    "X = np.delete(X, (627), axis=0)\n",
+    "#X = np.delete(X, (361), axis=0)\n",
+    "#X = np.delete(X, (374), axis=0)\n",
+    "#X = np.delete(X, (409), axis=0)\n",
+    "#X = np.delete(X, (587), axis=0)\n",
+    "#X = np.delete(X, (706), axis=0)\n",
+    "y = np.delete(y, (627), axis=0)\n",
+    "#y = np.delete(y, (361), axis=0)\n",
+    "#y = np.delete(y, (374), axis=0)\n",
+    "#y = np.delete(y, (409), axis=0)\n",
+    "#y = np.delete(y, (587), axis=0)\n",
+    "#y = np.delete(y, (706), axis=0)\n",
     "#print X.shape\n",
     "#print y.shape\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.33,random_state=42)"
+    "#print np.isnan(X).any()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.33,random_state=42)\n",
+    "X_train = np.delete(X_train, (705), axis=0)\n",
+    "y_train = np.delete(y_train, (705), axis=0)\n",
+    "#print np.isnan(X_train).any()\n",
+    "#for xt in X_train:\n",
+    "#    count += 1\n",
+    "#    if(np.isnan(xt).any()):\n",
+    "#        print count\n",
+    "#        print xt\n",
+    "#print np.isnan(y_train).any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1406844106463878\n"
+      "0.7125890736342043\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "knn = KNeighborsClassifier(n_neighbors=11)\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
     "knn.fit(X_train, y_train)\n",
     "pred = knn.predict(X_test)\n",
     "print accuracy_score(y_test, pred) * 100"
@@ -275,29 +300,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### kNN Accuracy Scores for Given k Values\n",
+    "### kNN Accuracy Scores for Given k Values - Cleaned Data\n",
     "\n",
     "#### Using ALL Audio Features\n",
-    "* 1 -> 14.4487 %\n",
-    "* 2 -> 7.9848 %\n",
-    "* 3 -> 3.9924 %\n",
-    "* 4 -> 2.6616 %\n",
-    "* 5 -> 2.4715 %\n",
-    "* 6 -> 2.0913 %\n",
-    "* 7 -> 1.7110 %\n",
-    "* 8 -> 1.5209 %\n",
-    "* 9 -> 1.3308 %\n",
-    "* 10 -> 1.3308 %\n",
+    "* 1 -> 0.4751 %\n",
+    "* 2 -> 1.6627 %\n",
+    "* 3 -> 1.9002 %\n",
+    "* 4 -> 2.1378 %\n",
+    "* 5 -> 1.1876 %\n",
+    "* 6 -> 0.7126 %\n",
+    "* 7 -> 0.7126 %\n",
+    "* 8 -> 1.1876 %\n",
+    "* 9 -> 1.1876 %\n",
+    "* 10 -> 0.9501 %\n",
     "\n",
     "#### Using Energy, Liveness, and Tempo\n",
+    "* 1 -> 0.2375 %\n",
+    "* 2 -> 1.6627 %\n",
+    "* 3 -> 1.6627 %\n",
+    "* 4 -> 2.1378 %\n",
+    "* 5 -> 1.6627 %\n",
+    "* 6 -> 1.6627 %\n",
+    "* 7 -> 1.4252 %\n",
+    "* 8 -> 1.1876 %\n",
+    "* 9 -> 1.1876 %\n",
+    "* 10 -> 1.4252 %\n",
     "\n",
     "#### Using Speechiness, Acousticness, and Instrumentalness\n",
+    "* 1 -> 0.7126 %\n",
+    "* 2 -> 1.4252 %\n",
+    "* 3 -> 1.4252 %\n",
+    "* 4 -> 1.1876 %\n",
+    "* 5 -> 1.1876 %\n",
+    "* 6 -> 1.1876 %\n",
+    "* 7 -> 1.1876 %\n",
+    "* 8 -> 1.1876 %\n",
+    "* 9 -> 0.9501 %\n",
+    "* 10 -> 1.1876 %\n",
     "\n",
-    "#### Using Key and Time Signature\n",
-    "\n",
-    "#### Using Tempo, Danceability, and Energy\n",
-    "\n",
-    "#### Using Tempo, Loudness, and Liveness"
+    "#### Using Danceability and Loudness\n",
+    "* 1 -> 0.7126 %\n",
+    "* 2 -> 0.9501 %\n",
+    "* 3 -> 0.7126 %\n",
+    "* 4 -> 0.7126 %\n",
+    "* 5 -> 0.7126 %\n",
+    "* 6 -> 0.7126 %\n",
+    "* 7 -> 0.7126 %\n",
+    "* 8 -> 0.7126 %\n",
+    "* 9 -> 0.7126 %\n",
+    "* 10 -> 0.7126 %"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yeah. This went absolutely nowhere. I can't draw any meaningful conclusion from the above other than that kNN isn't useful in predicting rank based on audio features."
    ]
   },
   {
