Some more analysis, with mixed results...
I tried some more tests with kNN, but it's pretty obvious from what I've seen that it wasn't really going anywhere. The accuracy was increadibly low and I honestly don't know what to do to fix that. As for Naive Bayes: I used Susie's source code (with a few changes) to try and predict rank based on all features and based on subsets of features, but it does not seem to have gotten anywhere either. I don't think I can reliably predict rank using either of these techniques.

--- a/sklearnkNN.ipynb
+++ b/sklearnkNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        " 3.0        272394    -7.596    0.405  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,9 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:10: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#ix-indexer-is-deprecated\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.cross_validation import train_test_split\n",
@@ -276,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -356,6 +371,71 @@
    "metadata": {},
    "source": [
     "Yeah. This went absolutely nowhere. I can't draw any meaningful conclusion from the above other than that kNN isn't useful in predicting rank based on audio features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, well, unless I can figure out what went horribly wrong with kNN, we'll try out Naive Bayes instead (ty Susie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.naive_bayes import BernoulliNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Rank                        Song   Artist  Year  \\\n",
+      "count   1276                        1276     1276  1276   \n",
+      "unique   101                        1276      822    17   \n",
+      "top       11  i write sins not tragedies  rihanna  2000   \n",
+      "freq      16                           1       16    95   \n",
+      "\n",
+      "                                                   Lyrics  \\\n",
+      "count                                                1251   \n",
+      "unique                                               1250   \n",
+      "top      yeah cmon i need a i want ai need a girl to r...   \n",
+      "freq                                                    2   \n",
+      "\n",
+      "                           ids Energy Liveness    Tempo Speechiness  \\\n",
+      "count                     1275   1275     1275     1275        1275   \n",
+      "unique                    1275    548      633     1236         673   \n",
+      "top     7Ie9W94M7OjPoZVV216Xus  0.726    0.109  125.014      0.0311   \n",
+      "freq                         1      9       15        3           6   \n",
+      "\n",
+      "       Acousticness Instrumentalness Time Signature Danceability   Key  \\\n",
+      "count          1275             1275           1275         1275  1275   \n",
+      "unique          945              451              6          508    13   \n",
+      "top           0.108                0              4        0.591     1   \n",
+      "freq              6              778           1223            9   182   \n",
+      "\n",
+      "       Duration (ms) Loudness Valence  \n",
+      "count           1275     1275    1275  \n",
+      "unique          1215     1170     653  \n",
+      "top           227840   -5.115   0.655  \n",
+      "freq               3        4       7  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print df.describe()"
    ]
   },
   {
