Now with accuracy per quartile

--- a/sklearnkNN_Quartiles.ipynb
+++ b/sklearnkNN_Quartiles.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "4         1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +235,20 @@
      "text": [
       "(1274, 11)\n",
       "(1274,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:10: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#ix-indexer-is-deprecated\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
      ]
     }
    ],
@@ -297,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -410,6 +424,78 @@
    "metadata": {},
    "source": [
     "Wow. That was... much better! We can predict within +/- 1 quartile at least 60% of the time, which means that generally speaking while we may not always be able to predict exactly what rank a song would be, we can more often predict its quartile and we can more often than not predict within 1 quartile of its actual value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accurately Predicted as Quartile 1 38.4615384615 %\n",
+      "Accurately Predicted as Quartile 2 24.5098039216 %\n",
+      "Accurately Predicted as Quartile 3 16.9811320755 %\n",
+      "Accurately Predicted as Quartile 4 22.9357798165 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "quart1count = 0\n",
+    "diffquart1 = list()\n",
+    "quart2count = 0\n",
+    "diffquart2 = list()\n",
+    "quart3count = 0\n",
+    "diffquart3 = list()\n",
+    "quart4count = 0\n",
+    "diffquart4 = list()\n",
+    "for q in range(len(y_test)):\n",
+    "    if y_test[q] == 1:\n",
+    "        quart1count += 1\n",
+    "        diffquart1.append(y_test[q]-pred[q])\n",
+    "    if y_test[q] == 2:\n",
+    "        quart2count += 1\n",
+    "        diffquart2.append(y_test[q]-pred[q])\n",
+    "    if y_test[q] == 3:\n",
+    "        quart3count += 1\n",
+    "        diffquart3.append(y_test[q]-pred[q])\n",
+    "    if y_test[q] == 4:\n",
+    "        quart4count += 1\n",
+    "        diffquart4.append(y_test[q]-pred[q])\n",
+    "accq1= 0\n",
+    "for h in diffquart1:\n",
+    "    if h == 0:\n",
+    "        accq1 += 1\n",
+    "print \"Accurately Predicted as Quartile 1\",(accq1/float(len(diffquart1)))*100, \"%\"\n",
+    "accq2= 0\n",
+    "for h in diffquart2:\n",
+    "    if h == 0:\n",
+    "        accq2 += 1\n",
+    "print \"Accurately Predicted as Quartile 2\",(accq2/float(len(diffquart2)))*100, \"%\"\n",
+    "accq3= 0\n",
+    "for h in diffquart3:\n",
+    "    if h == 0:\n",
+    "        accq3 += 1\n",
+    "print \"Accurately Predicted as Quartile 3\",(accq3/float(len(diffquart3)))*100, \"%\"\n",
+    "accq4= 0\n",
+    "for h in diffquart4:\n",
+    "    if h == 0:\n",
+    "        accq4 += 1\n",
+    "print \"Accurately Predicted as Quartile 4\",(accq4/float(len(diffquart4)))*100, \"%\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So it seems that certain quartiles are predicted correctly more often than others. Songs in Quartile 1 are predicted correctly more often than songs in any other quartile, and songs in Quartile 3 are predicted correctly the least often.\n",
+    "\n",
+    "* Q1: 38.4615%\n",
+    "* Q2: 24.5098%\n",
+    "* Q3: 16.9811%\n",
+    "* Q4: 22.9358%"
    ]
   },
   {
