corrections and additional info

--- a/sklearnkNN_Quartiles.ipynb
+++ b/sklearnkNN_Quartiles.ipynb
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -370,8 +370,8 @@
      "output_type": "stream",
      "text": [
       "Completely Accurate 25.6532066508 %\n",
-      "One Below 16.1520190024 %\n",
-      "One Above 18.7648456057 %\n",
+      "One Above 16.1520190024 %\n",
+      "One Below 18.7648456057 %\n",
       "Sum of the Three 60.5700712589 %\n"
      ]
     }
@@ -393,12 +393,12 @@
     "for w in differences:\n",
     "    if w == -1:\n",
     "        acc1 += 1\n",
-    "print \"One Below\",(acc1/float(len(pred)))*100, \"%\"\n",
+    "print \"One Above\",(acc1/float(len(pred)))*100, \"%\"\n",
     "acc2 = 0\n",
     "for w in differences:\n",
     "    if w == 1:\n",
     "        acc2 += 1\n",
-    "print \"One Above\",(acc2/float(len(pred)))*100, \"%\"\n",
+    "print \"One Below\",(acc2/float(len(pred)))*100, \"%\"\n",
     "print \"Sum of the Three\", ((acc0+acc1+acc2)/float(len(pred)))*100, \"%\""
    ]
   },
@@ -496,6 +496,29 @@
     "* Q2: 24.5098%\n",
     "* Q3: 16.9811%\n",
     "* Q4: 22.9358%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted one Above Quartile 1 24.0384615385 %\n",
+      "Dead on Or One Above 62.5 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "accq1a= 0\n",
+    "for h in diffquart1:\n",
+    "    if h == -1:\n",
+    "        accq1a += 1\n",
+    "print \"Predicted one Above Quartile 1\",(accq1a/float(len(diffquart1)))*100, \"%\"\n",
+    "print \"Dead on Or One Above\", ((accq1a+accq1)/float(len(diffquart1)))*100, \"%\""
    ]
   },
   {
